# Im0xDump

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: CustomImGuiFrame.h  FileDumper.h  ImGuiFrame.h  MainImGuiFrame.h
src/: CustomImGuiFrame.cpp  FileDumper.cpp  ImGuiFileBrowser.cpp  ImGuiFrame.cpp  MainImGuiFrame.cpp  main.cpp
